--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: 오정규 페이지
+title: 오정규 Blog
 email: hhh2123623@gmail.com
 
 github_username:  OhJeonggyu
-facebook_username: https://www.facebook.com/JeonggyuOh1990
+facebook_username: JeonggyuOh1990
 
 markdown: kramdown
 redcarpet:
